--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.456.0",
     "postcss": "^8.4.21",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.13.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
     "web-vitals": "^4.2.3"
   },
